update pcg dot yson

--- a/package.json
+++ b/package.json
@@ -8,5 +8,5 @@
   "keywords": [],
   "author": "Mundalamo kharendwe",
   "license": "ISC",
-  "description": ""
+  "description": "this is a python interpreter"
 }
